outputs_20260331-105410-8a3c83b2/codegen/production/build_logs/compiler_stderr.log
In file included from /tmp/tdd_build_pfi3c6va/src/egtm_atom_adc_tmadc_multiple_channels.c:9:
/tmp/tdd_build_pfi3c6va/include/IfxEgtm_Pwm.h:167:5: error: unknown type name ‘IfxEgtm_Pwm_OutputConfig’; did you mean ‘IfxEgtm_Pwm_DtmConfig’?
  167 |     IfxEgtm_Pwm_OutputConfig    *output;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
      |     IfxEgtm_Pwm_DtmConfig
/tmp/tdd_build_pfi3c6va/src/egtm_atom_adc_tmadc_multiple_channels.c:11:10: fatal error: IfxPort_PinMap.h: No such file or directory
   11 | #include "IfxPort_PinMap.h"
      |          ^~~~~~~~~~~~~~~~~~
compilation terminated.

In file included from /tmp/tdd_build_pfi3c6va/mocks/mock_egtm_atom_adc_tmadc_multiple_channels.c:4:
/tmp/tdd_build_pfi3c6va/include/IfxEgtm_Pwm.h:167:5: error: unknown type name ‘IfxEgtm_Pwm_OutputConfig’; did you mean ‘IfxEgtm_Pwm_DtmConfig’?
  167 |     IfxEgtm_Pwm_OutputConfig    *output;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
      |     IfxEgtm_Pwm_DtmConfig
